# Iron_condor

./: .gitignore  AUDIT_REPORT.md  README.md  check_closing_pnl.py  check_exits.py  launch_monitor.bat  pyproject.toml  run_live_monitor.py  state.json  walkthrough_session_20260203.md
configs/: backtest_config.yaml  base.yaml  experiment_wfa.yaml  test_diagnostic.yaml  test_quick.yaml
docs/: daily_log_2026_02_06.md  daily_log_2026_02_09.md  daily_log_2026_02_10.md  daily_log_2026_02_13.md  daily_log_2026_02_17.md  daily_log_2026_02_19.md  daily_log_2026_02_20.md  daily_log_2026_02_23.md  daily_log_2026_02_26.md  daily_log_2026_02_27.md  implementation_plan.md  scenario_specification.md  task.md  walkthrough.md
outputs/: bitacora_updater.state  state_backup_20260219_093214.json
scripts/: add_comments_column.py  analyze_results.py  audit_current_positions.py  audit_order_history.py  audit_orders.py  background_watchdog.ps1  bitacora_updater.ps1  calibrate_iv_factor.py  cancel_all_orders.py  check_ibkr_position.py  check_live_feed.py  check_pnl.py  check_positions.py  check_trades_history.py  clean_orders.py  debug_contract_search.py  debug_parquet.py  download_databento.py  emergency_close.py  emergency_close_all.py  emergency_flatten.py  fetch_historical_greeks.py  forensic_audit.py  run_data_check.py  run_grid_search_is.py  run_synthetic_backtest.py  run_walk_forward.py  test_combo_structure.py  test_market_data.py  verify_combo_logic.py  verify_config.py  verify_journal_workflow.py  vrp_dashboard.py
tests/: test_bs_repricing.py  test_chain_keys.py  test_ev_exit.py  (+11 more)
(+34 files in other folders)
